--- a/Panepone/package.json
+++ b/Panepone/package.json
@@ -14,13 +14,17 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/routers": "^6.1.0",
     "@react-navigation/stack": "^6.0.11",
+    "matter-js": "^0.18.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.66.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
