--- a/Panepone/package.json
+++ b/Panepone/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.66.4",
+    "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
